--- a/package.json
+++ b/package.json
@@ -55,5 +55,10 @@
     "makeup-exit-emitter": "~0.0",
     "makeup-focusables": "~0.0",
     "makeup-next-id": "~0.0"
-  }
+  },
+  "files": [
+    "browser.json",
+    "index.js",
+    "yarn.lock"
+  ]
 }
