--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 node_js:
   - "8"
+dist: trusty
 # Send coverage data to Coveralls
 after_success: "cat ./reports/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
 addons:
