Upgraded to makeup-exit-emitter v0.2

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ docs/index.js
 test/static/bundle-test.js
 test/static/lasso-client.js
 test/static/custom-event-polyfill.js
+test/static/nanoid.js
+test/static/process.js
 test/static/makeup-next-id.js
 test/static/makeup-focusables.js
 test/static/makeup-exit-emitter.js
