--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store
+
 # Logs
 logs
 *.log
@@ -9,20 +11,8 @@ node_modules
 # Lint output
 lint.txt
 
-# Lasso docs temp files
-.cache
-build
-docs/index.js
-
-# Lasso tests temp files
-test/static/bundle-test.js
-test/static/lasso-client.js
-test/static/custom-event-polyfill.js
-test/static/nanoid.js
-test/static/process.js
-test/static/makeup-next-id.js
-test/static/makeup-focusables.js
-test/static/makeup-exit-emitter.js
+# Docs temp files
+docs/transpiled
 
 # Unit Test & Code Coverage Reports
-reports
+coverage
