--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "webpack-cli": "^3"
   },
   "dependencies": {
-    "custom-event-polyfill": "^1",
+    "custom-event": "^1",
     "makeup-exit-emitter": "~0.2.1",
     "makeup-focusables": "~0.0.4",
     "makeup-next-id": "~0.1.2"
